Corrected some issues found by 'findbugs'. Added 'random steal' type test application.
git-svn-id: http://gforge.cs.vu.nl/svn/ibis/smartsockets/trunk@6209 aaf88347-d911-0410-b711-e54d386773bb